overflow fix attempt1

--- a/src/App.css
+++ b/src/App.css
@@ -333,4 +333,10 @@ figcaption {
   .actionbtn {
     border: 2px solid white;
   }
+  .about {
+    overflow: hidden;
+  }
+  .me {
+    width: 90%
+  }
 }
